# smilintux-org

./: .env.example  .gitignore  .mcp.json  .windsurfrules  =5.9  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Makefile  README.md  conftest.py  crush.json  docker-compose.yml  opencode.json  package.json
.cursor/: mcp.json
.cursor/agents/: docs-writer.md  mcp-builder.md  skchat-builder.md  transport-builder.md
.cursor/rules/: agent.mdc  ops_gotchas.mdc  skcapstone.mdc
.forgejo/workflows/: ansible-lint.yml  skcapstone.yml
.github/workflows/: ci.yml  consciousness-swipe.yml  deploy-pages.yml  deploy-signaling.yml  extensions.yml  release.yml  skstacks-ansible.yml  skstacks-k8s.yml  vscode-extension.yml
cloud9-skworld-io/: CNAME  index.html
consciousness-swipe/: PRIVACY_POLICY.md  README.md  STORE_LISTING.md  SUBMISSION_CHECKLIST.md  build-firefox.js  build.js  consciousness-swipe-firefox-0.2.0.xpi  manifest.json  package-lock.json  package.json
consciousness-swipe/dist-firefox/: background.js  manifest.json
consciousness-swipe/src/: background.js
consciousness-swipe/store/: DEVELOPER_ACCOUNT_SETUP.md  PRIVACY_POLICY.md  STORE_LISTING.md  SUBMISSION_CHECKLIST.md
consciousness-swipe/tests/: test_export.js  test_oof_parser.js  test_scrapers.js  test_skcomm_client.js  test_snapshot_schema.js
docs/: AGENT_SCAFFOLDING.md  AGENT_TEAMS.md  API.md  ARCHITECTURE.md  CLI_AUDIT_NOTES.md  CONSCIOUSNESS_SWIPE.md  CONTENT_PACKAGE.md  EXTENSIONS.md  FAQ.md  MANIFESTO.md  MCP_INTEGRATION.md  NEXTCLOUD.md  PMA_INTEGRATION.md  QUICKSTART.md  SKCOMM_API.md  SKCOMM_SETUP.md  SKSEED.md  TEST-AUDIT.md  TRUSTEE_OPERATIONS.md  TWITTER_THREADS.md  VARUS_SPEC.md  VSCODE_SKCAPSTONE_CONTEXT.md  WELCOME_SEQUENCE.md  crush-integration.md  lumina-seeds.md  mcp-completion-report.md  mcp-cursor-integration.md  mcp-integration-summary.md  mcp-quickstart.md
marketing/twitter-threads/: README.md  thread-01-sovereign-ai-identity.md  thread-02-why-your-ai-forgets-you.md  thread-03-capauth-passwordless-future.md  thread-04-cloud9-emotional-bonding.md  thread-05-smilintux-stack-overview.md  thread-06-skseed-truth-alignment.md  thread-07-varus-sovereign-chain.md  thread-08-consciousness-swipe-no-ai-reset.md  thread-09-editor-extensions-sovereign-dev.md
nextcloud-capauth/: INSTALL.md
nextcloud-capauth/appinfo/: info.xml  routes.php
nextcloud-capauth/css/: login.css
nextcloud-capauth/js/: admin.js  login.js
nextcloud-capauth/templates/: admin.php  login.php
scripts/: bump-version.sh  check-lockfiles.js  check-release.py  dev-stack.sh  generate_pma_agreement.py  install-all.sh  redesign-sites.py  setup_skcomm_sync.sh  skcomm-api.service  skcomm_bridge.py  test-all.sh  test-integration.sh
shared-assets/css/: sk-design-system.css
skarchitect/: CLAUDE.md  LICENSE  MANIFESTO.md  README.md  package.json  pyproject.toml  skill.yaml  tsconfig.json
skarchitect-io/: CLAUDE.md  LICENSE  drizzle.config.ts  local.db  package-lock.json  package.json
skarchitect-io/app/: layout.tsx  page.tsx
skarchitect/src/: index.ts
skarchitect/src/skarchitect/: __init__.py  categories.py  cli.py  crypto.py  delegation.py  did_integration.py  models.py  privacy.py  proposals.py  skill.py  tally.py  voting.py
skarchitect/tests/: test_crypto.py  test_delegation.py  test_models.py  test_privacy.py  test_tally.py  test_voting.py
skcapstone-cursor/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
skcapstone-cursor/src/: bridge.ts  extension.ts
skcapstone-nvim/: Makefile  README.md
skcapstone-nvim/tests/: minimal_init.lua
skcapstone-vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
skcapstone-vscode/src/: cli.ts  extension.ts  views.ts
skills-registry/: Dockerfile  pyproject.toml  seed_examples.py
skills-registry/skills_registry/: __init__.py  auth.py  main.py  storage.py
skills-registry/tests/: test_admin.py  test_auth.py  test_integration.py  test_registry_api.py
skpdf-io/: index.html  template-builder.html
skprofile-pwa/: index.html  manifest.json  sw.js
skprofile-pwa/css/: style.css
skprofile-pwa/js/: api.js  app.js
skseed/: .gitignore  README.md  package.json  pyproject.toml  skill.yaml  tsconfig.json
skseed/.github/workflows/: ci.yml  publish-npm.yml  publish.yml
skseed/.pytest_cache/v/cache/: nodeids
skseed/skseed/: __init__.py  alignment.py  audit.py  cli.py  collider.py  framework.py  hooks.py  llm.py  models.py  philosopher.py  skill.py
skseed/skseed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skseed/skseed/data/: seed.json  skill.yaml
skseed/src/: index.ts
skseed/tests/: test_alignment.py  test_audit.py  test_collider.py  test_framework.py  test_hooks.py  test_llm.py  test_llm_callbacks.py  test_philosopher.py  test_skill.py  test_skill_entrypoints.py
smilinTux-Marketing/Comms-X-Marketing-Prompt-1-Lumina-Comms/: Comms-X-Marketing-Prompt-1-Image-Prompts.md  Comms-X-Marketing-Prompt-1-Lumina-Comms.md
smilinTux-Marketing/Comms-X-Marketing-Prompt-2-Thread-Weaver/: Comms-X-Marketing-Prompt-2-Thread-Weaver-image-prompts.md  Comms-X-Marketing-Prompt-2-Thread-Weaver.md
smilinTux-Marketing/Comms-X-Marketing-Prompt-3-Landing-Page/: Comms-X-Marketing-Prompt-3-Landing-Page.md
smilinTux-Marketing/Comms-X-Marketing-Prompt-4-community-builder/: Comms-X-Marketing-Prompt-4-community-builder.md
smilinTux-Marketing/Comms-X-Marketing-Prompt-5-Technical-Translator-arch--content/: Comms-X-Marketing-Prompt-5-Technical-Translator-arch--content.md
tests/: test_e2e_notification.py  test_pma_pdf.py
tests/e2e/: package-lock.json  package.json  playwright.config.js
tests/integration/: conftest.py  test_capauth_authentik_chain.py  test_cloud9_flow.py  (+8 more)
varus/: README.md  conftest.py  pyproject.toml
varus/tests/: test_block.py  test_chain.py  test_cli.py  test_node.py  test_sync.py
varus/varus/: __init__.py  block.py  chain.py  cli.py  node.py  sync.py
weblink-signaling/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts  wrangler.toml
(+106 files in other folders)
