[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-registry"
version = "0.1.0"
description = "SKSkills remote registry — FastAPI service for skills.smilintux.org"
requires-python = ">=3.10"
authors = [
    {name = "smilinTux.org", email = "hello@smilintux.org"},
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://skills.smilintux.org"
Repository = "https://github.com/smilinTux/smilintux-org"
Issues = "https://github.com/smilinTux/smilintux-org/issues"

[project.scripts]
skills-registry = "skills_registry.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills_registry*"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
